--- a/views/detalhes.ejs
+++ b/views/detalhes.ejs
@@ -5,9 +5,43 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Detalhes</title>
+    <link rel="stylesheet" href="/css/detalhes.css" type="text/css">
+    <link rel="shortcut icon" href="/css/assets/img/favicon.ico">
 </head>
-
 <body>
-    
+    <header>
+        <a href='/'>
+            <div class="logo">
+                <h1 class="title">Pokédex</h1>
+                <img class="pokedex-logo"
+                     alt="Logo Pokedex"
+                     src="https://cdn.icon-icons.com/icons2/851/PNG/512/Pokedex_tool_icon-icons.com_67529.png"
+                >
+            </div>
+        </a>
+    </header>
+    <main>
+        <% pokemonAtual.forEach(element => { %>
+            <div class="card-container">
+                    <div class="header-card">
+                        <span>ID: <%= element.id %></span>
+                        <span>NUM: <%= element.num %></span>
+                    </div>
+                <div class="main-card">
+                    <img 
+                     class="card-img"
+                     src="<%= element.img %> " 
+                     alt="<%= element.name %> "
+                     >
+                    <div class="card-name"><%= element.name %> </div>
+                    <div class="data-card">
+                        <span class="card-peso">Peso: <%= element.weight %> </span>
+                        <span class="card-altura">Altura: <%= element.height %></span>               
+                </div>
+                </div>
+                <div class="footer-card">Tipo: <%= element.type %> </div>
+            </div>
+        <% }) %>
+    </main>
 </body>
 </html>
