--- a/public/css/detalhes.css
+++ b/public/css/detalhes.css
@@ -84,15 +84,16 @@ img.card-img{
     justify-content: center;
 }
 div.footer-card{
-    margin-top: 20px;
-    font-size: 25px;
+    margin-top: 15px;
+    font-size: 16px;
 }
 div.data-card{
     margin-top: 10px;
     display: flex;
+    flex-direction: column;
     justify-content: space-between;
     align-items:inherit;
-    font-size: 25px;
+    font-size: 15px;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
 a{
