--- a/views/detalhes.ejs
+++ b/views/detalhes.ejs
@@ -4,7 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Detalhes</title>
+    <% pokemonAtual.forEach(element => { %>
+    <title>Detalhes do <%= element.name %> </title>
+    <% }) %>
     <link rel="stylesheet" href="/css/detalhes.css" type="text/css">
     <link rel="shortcut icon" href="/css/assets/img/favicon.ico">
 </head>
@@ -36,7 +38,10 @@
                     <div class="card-name"><%= element.name %> </div>
                     <div class="data-card">
                         <span class="card-peso">Peso: <%= element.weight %> </span>
-                        <span class="card-altura">Altura: <%= element.height %></span>               
+                        <span class="card-altura">Altura: <%= element.height %></span>    
+                        <p>Doce: <%= element.candy %></p>  
+                        <p>Fraqueza: <%= element.weaknesses %></p>
+                        <p>Chance de aparecer: <%- element.spawn_chance %>% </p>
                 </div>
                 </div>
                 <div class="footer-card">Tipo: <%= element.type %> </div>
